# capnpc-altcxx

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: CapnpCompile.cmake  FindCapnp.cmake  FindCapnpAltC++.cmake
examples/: CMakeLists.txt
examples/addressbook/: CMakeLists.txt  addressbook.c++
include/capnp/altc++/: c++.capnp  common.h  generated-header-support.h  impl-pipeline.h  impl-rpc.h  impl.h  list-utils.h  property-pipeline.h  property-rpc.h  property.h
src/: capnpc-altc++.c++
tests/: CMakeLists.txt  any-test.c++  basic-test.c++  rpc-test.c++  test-util.c++  test-util.h  test.c++  test.capnp
